--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -100,6 +100,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        @include tablette{
+            overflow: initial;
+        }
         @include L-ordinateur{
             overflow: initial;
         }
